[tool.poetry]
name = "suftware"
version = "1.0.4"
description = "One-dimensional density estimation using Bayesian field theory."
authors = ["Justin B. Kinney <jkinney@cshl.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# For running the package
python = ">=3.10"
numpy = ">=1.26.0"
scipy = ">=1.5.0"
pandas = ">=1.2.0"
matplotlib = ">=3.3.0"

# For building the docs
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.3.0"
numpydoc = ">=0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
